@@ -4,7 +4,6 @@ import java.io.IOException;
 import java.net.URISyntaxException;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.List;
 import java.util.Optional;
 import java.util.function.Predicate;
@@ -56,14 +55,14 @@ public class PdfXmpImporterTest {
 
     @Test
     public void importEncryptedFileReturnsError() throws URISyntaxException {
-        Path file = Paths.get(PdfXmpImporterTest.class.getResource("/pdfs/encrypted.pdf").toURI());
+        Path file = Path.of(PdfXmpImporterTest.class.getResource("/pdfs/encrypted.pdf").toURI());
         ParserResult result = importer.importDatabase(file, StandardCharsets.UTF_8);
         assertTrue(result.hasWarnings());
     }
 
     @Test
     public void testImportEntries() throws URISyntaxException {
-        Path file = Paths.get(PdfXmpImporterTest.class.getResource("annotated.pdf").toURI());
+        Path file = Path.of(PdfXmpImporterTest.class.getResource("annotated.pdf").toURI());
         List<BibEntry> bibEntries = importer.importDatabase(file, StandardCharsets.UTF_8).getDatabase().getEntries();
 
         assertEquals(1, bibEntries.size());
@@ -77,7 +76,7 @@ public class PdfXmpImporterTest {
 
     @Test
     public void testIsRecognizedFormat() throws IOException, URISyntaxException {
-        Path file = Paths.get(PdfXmpImporterTest.class.getResource("annotated.pdf").toURI());
+        Path file = Path.of(PdfXmpImporterTest.class.getResource("annotated.pdf").toURI());
         assertTrue(importer.isRecognizedFormat(file, StandardCharsets.UTF_8));
     }
 
